# openhexa-sdk

./: README.md  pyproject.toml
src/OpenHexa/: OpenHexa.py  __init__.py
src/openhexa/: __init__.py  openhexa.py
tests/: test_openhexa.py
