[project]
name = "OpenHexa-SDK"
version = "0.0.1"
description = "A mini SDK for OpenHexa"
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = [
    "requests",
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tests = [
    "responses >= 0.21"
]
